style and text modified

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               class="contact-form"
               cols="21"
               rows="3"
-              placeholder="Do not forget to provide us with Your name, email address and Language of your choice"
+              placeholder="Do not forget to provide us with Your full name and Language of your choice"
             ></textarea
             ><br />
             <input type="submit" value="send" />
@@ -541,7 +541,9 @@
       </section>
       <section class="empty-space6">
         <div class="goUp">
-          <a href="#top"><i class="fa fa-arrow-circle-up" aria-hidden="true" id="goUp"></i></a> 
+          <a href="#top"
+            ><i class="fa fa-arrow-circle-up" aria-hidden="true" id="goUp"></i
+          ></a>
         </div>
       </section>
       <footer class="footer">
@@ -566,13 +568,19 @@
         <div class="socialMedia">
           <h6>Contact us & Follow us on:</h6>
           <div class="facebook">
-            <i class="fa fa-facebook" aria-hidden="true" id="faceIcon"></i>
+            <a href="https://www.facebook.com/" target="_Blank">
+              <i class="fa fa-facebook" aria-hidden="true" id="faceIcon"></i
+            ></a>
           </div>
           <div class="instagram">
-            <i class="fa fa-instagram" aria-hidden="true" id="instIcon"></i>
+            <a href="https://www.instagram.com/" target="_Blank">
+              <i class="fa fa-instagram" aria-hidden="true" id="instIcon"></i
+            ></a>
           </div>
           <div class="whatsup">
-            <i class="fa fa-whatsapp" aria-hidden="true" id="whatsIcon"></i>
+            <a href="https://faq.whatsapp.com/en/web/26000012/" target="_Blank">
+              <i class="fa fa-whatsapp" aria-hidden="true" id="whatsIcon"></i
+            ></a>
           </div>
         </div>
         <div class="fullAddress">
